-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.1
-
None
-
5fea89d9d (dev), 87b78f0cd (6.10), 8aa6258cd (6.9), aa1682394 (tqtc/lts-6.8)
seeing some build errors as below when building qt 6.9.1 on macos ventura runners
2025-06-26T00:00:13.2726250Z [10336/11621] /opt/homebrew/Library/[10336/11621] /opt/homebrew/Library/Homebrew/shims/mac/super/clang++ -DGL_SILENCE_DEPRECATION -DQDarwinMediaPlugin_EXPORTS -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MULTIMEDIA_LIB -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_NO_STD_FORMAT_SUPPORT -DQT_PLUGIN -DQT_USE_QSTRINGBUILDER -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_FAST -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtmultimedia/src/plugins/multimedia/darwin/QDarwinMediaPlugin_autogen/include -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtmultimedia/src/plugins/multimedia/darwin -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/audio -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/camera -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/common -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/mediaplayer -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtMultimedia -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/lib/QtMultimedia.framework/Headers -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtCore -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/lib/QtCore.framework/Headers -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtbase/mkspecs/macx-clang -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtGui -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/lib/QtGui.framework/Headers -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtNetwork -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/lib/QtNetwork.framework/Headers -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtmultimedia/src/multimedia -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtMultimedia/6.9.1 -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtMultimedia/6.9.1/QtMultimedia -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/src/corelib -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtCore/6.9.1 -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtCore/6.9.1/QtCore -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/src/gui -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtGui/6.9.1 -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtGui/6.9.1/QtGui -F/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/lib -x objective-c++ -DNDEBUG -O2 -std=gnu++17 -arch arm64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX14.sdk -mmacosx-version-min=13.0 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fapplication-extension -ftrivial-auto-var-init=pattern -fstack-protector-strong -fno-exceptions -MD -MT qtmultimedia/src/plugins/multimedia/darwin/CMakeFiles/QDarwinMediaPlugin.dir/mediaplayer/avfdisplaylink.mm.o -MF qtmultimedia/src/plugins/multimedia/darwin/CMakeFiles/QDarwinMediaPlugin.dir/mediaplayer/avfdisplaylink.mm.o.d -o qtmultimedia/src/plugins/multimedia/darwin/CMakeFiles/QDarwinMediaPlugin.dir/mediaplayer/avfdisplaylink.mm.o -c /private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/mediaplayer/avfdisplaylink.mm FAILED: [code=1] qtmultimedia/src/plugins/multimedia/darwin/CMakeFiles/QDarwinMediaPlugin.dir/mediaplayer/avfdisplaylink.mm.o /opt/homebrew/Library/Homebrew/shims/mac/super/clang++ -DGL_SILENCE_DEPRECATION -DQDarwinMediaPlugin_EXPORTS -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MULTIMEDIA_LIB -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_NO_STD_FORMAT_SUPPORT -DQT_PLUGIN -DQT_USE_QSTRINGBUILDER -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_FAST -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtmultimedia/src/plugins/multimedia/darwin/QDarwinMediaPlugin_autogen/include -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtmultimedia/src/plugins/multimedia/darwin -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/audio -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/camera -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/common -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/mediaplayer -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtMultimedia -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/lib/QtMultimedia.framework/Headers -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtCore -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/lib/QtCore.framework/Headers -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtbase/mkspecs/macx-clang -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtGui -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/lib/QtGui.framework/Headers -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtNetwork -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/lib/QtNetwork.framework/Headers -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtmultimedia/src/multimedia -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtMultimedia/6.9.1 -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtMultimedia/6.9.1/QtMultimedia -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/src/corelib -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtCore/6.9.1 -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtCore/6.9.1/QtCore -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/src/gui -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtGui/6.9.1 -I/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/include/QtGui/6.9.1/QtGui -F/private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/build/qtbase/lib -x objective-c++ -DNDEBUG -O2 -std=gnu++17 -arch arm64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX14.sdk -mmacosx-version-min=13.0 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fapplication-extension -ftrivial-auto-var-init=pattern -fstack-protector-strong -fno-exceptions -MD -MT qtmultimedia/src/plugins/multimedia/darwin/CMakeFiles/QDarwinMediaPlugin.dir/mediaplayer/avfdisplaylink.mm.o -MF qtmultimedia/src/plugins/multimedia/darwin/CMakeFiles/QDarwinMediaPlugin.dir/mediaplayer/avfdisplaylink.mm.o.d -o qtmultimedia/src/plugins/multimedia/darwin/CMakeFiles/QDarwinMediaPlugin.dir/mediaplayer/avfdisplaylink.mm.o -c /private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/mediaplayer/avfdisplaylink.mm /private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/mediaplayer/avfdisplaylink.mm:157:14: error: no type named 'lock_guard' in namespace 'std' std::lock_guard guard{ m_displayLinkMutex }; ~~~~~^ /private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/mediaplayer/avfdisplaylink.mm:168:10: error: no type named 'unique_lock' in namespace 'std' std::unique_lock guard{ m_displayLinkMutex }; ~~~~~^ /private/tmp/qt-20250625-81569-n3h1ix/qt-everywhere-src-6.9.1/qtmultimedia/src/plugins/multimedia/darwin/mediaplayer/avfdisplaylink.mm:187:14: error: no type named 'unique_lock' in namespace 'std' std::unique_lock guard{ m_displayLinkMutex }; ~~~~~^ 3 errors generated.
relates to https://github.com/Homebrew/homebrew-core/pull/226130
For Gerrit Dashboard: QTBUG-138060 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
656603,2 | darwin: include missing header | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
656707,2 | darwin: include missing header | 6.10 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
656851,2 | darwin: include missing header | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
657030,2 | darwin: include missing header | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |