darwin: include missing header

Fixes: QTBUG-138060
Pick-to: 6.8 6.9 6.10
Change-Id: Id0433597842c9e5b25101bf2f426b890db2f6e95
Reviewed-by: Tim Blechmann <tim.blechmann@qt.io>
Reviewed-by: Nils Petter Skålerud <nils.petter.skalerud@qt.io>